src/objects/Zuora__ZuoraConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Zuora__DisableSubscriptionTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether chatter for Subscriptions is disabled.</description>
        <inlineHelpText>Indicates whether chatter for Subscriptions is disabled.</inlineHelpText>
        <label>Disable chatter for subscriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__NotificationEmailAddress__c</fullName>
        <defaultValue>&quot;z4sf.ga@zuora.com&quot;</defaultValue>
        <description>Failed callouts will send logs to this email address.</description>
        <inlineHelpText>Failed callouts will send logs to this email address.</inlineHelpText>
        <label>Notification Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Z360Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Zuora 360 package is installed. The value is set by the package installation script and should not be changed elsewhere.</description>
        <inlineHelpText>Indicates whether the Z360 package is installed. The value is set by the package installation script and should not be changed elsewhere.</inlineHelpText>
        <label>Zuora 360 Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__Z360MajorVersion__c</fullName>
        <description>The major version of this package. e.g. for version 5.1.4, the major version is 5.</description>
        <label>Zuora 360 Major Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Z360MinorVersion__c</fullName>
        <description>The minor version of the package. e.g. for version 5.1.3, the minor version is 1.</description>
        <label>Zuora 360 Minor Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ZQuotesInstalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Zuora Quotes package is installed. The value is set by the package installation script and should not be changed elsewhere.</description>
        <inlineHelpText>Indicates whether the Z-Quotes package is installed. The value is set by the package installation script and should not be changed elsewhere.</inlineHelpText>
        <label>Zuora Quotes Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__ZQuotesMajorVersion__c</fullName>
        <description>The major version of this package. e.g. for version 5.1.4, the major version is 5.</description>
        <label>Zuora Quotes Major Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ZQuotesMinorVersion__c</fullName>
        <description>The minor version of the package. e.g. for version 5.1.3, the minor version is 1.</description>
        <label>Zuora Quotes Minor Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Check_Payment_Method_Id__c</fullName>
        <label>Check Payment Method Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Zuora Config</label>
</CustomObject>